--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,6 @@
 @import "minima";
 
 .site-footer {
-    border-top: 15px solid $grey-color-light;
+    border-top: 15px solid red;
     padding: $spacing-unit 0;
   }
