--- a/main.css
+++ b/main.css
@@ -4,8 +4,7 @@ body {
     margin-right: 15%;
     margin-bottom: 10%;
     margin-left: 15%;
-    font-family: 'Montserrat', sans-serif;
-    
+    font-family: 'Playfair Display', serif;
 }
 
 h1 {
