--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
     margin-right: 15%;
     margin-bottom: 10%;
     margin-left: 15%;
-    font-family: 'Playfair Display', serif;
+    font-family: "Lucida Grande", serif;
 }
 
 h1 {
