--- a/post.css
+++ b/post.css
@@ -1,14 +1,13 @@
 body {
   margin: 0 auto;
   max-width: 50em;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Lucida Grande", sans-serif;
   line-height: 1.5;
   padding: 4em 1em;
   color: #555;
 }
 
 h2 {
-  font-family: 'Lora', serif;
   margin-top: 1em;
   padding-top: 1em;
 }
