--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,6 +13,10 @@ h1 {
     animation-iteration-count: 1;
 }
 
+h2 {
+    color: #FFFFFF;
+}
+
 h3 {
     color: #444444;
 }
@@ -23,6 +27,10 @@ ul, li {
     text-align: left;
     margin-top: 10px;
     padding:0; 
+}
+
+p {
+    color: #FFFFFF;
 }
 
 a {
