Removed title link from home page.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
     
     <body>
         <div class="head">
-            <h3><a href="/index.html">Elliot Alker</a></h3>
+            <h3>Elliot Alker</h3>
             <h2>Software Engineer</h2>
         </div>
         
