--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #333333;
+    background-color: white;
     margin-top: 5%;
     margin-right: 15%;
     margin-bottom: 10%;
@@ -8,17 +8,17 @@ body {
 }
 
 h1 {
-    color: #FFFFFF;
+    color: black;
     font-size: 5em;
     animation-iteration-count: 1;
 }
 
 h2 {
-    color: #FFFFFF;
+    color: black;
 }
 
 h3 {
-    color: #444444;
+    color: black;
 }
 
 ul, li {
@@ -30,7 +30,7 @@ ul, li {
 }
 
 p {
-    color: #FFFFFF;
+    color: black;
 }
 
 a {
@@ -39,7 +39,7 @@ a {
 }
 
 a:hover {
-    color: #FFFFFF;
+    color: blue;
 }
 
 .head {
