--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,62 @@
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+        <!-- Font from Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
         <title>{{ page.title }}</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
     </head>
-    
+
     <body>
         
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <div class="container">
+                    <h1 class="navbar-brand mb-0">Elliot Alker</h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li><a href="/blog.html">blog</a></li>
+                    <li><a href="https://github.com/elliotalker">code</a></li>
+                    <li><a href="https://www.alker.xyz">web projects</a></li>
+                    <li><a href="/software-engineering.html">software engineering</a></li>
+                    <li><a href="https://pinboard.in/u:elliot35">links</a></li>
+                    <li><a href="https://twitter.com/elliotdev_">twitter</a></li>
+                    <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a></li>
+                    <li><a href="/about.html">about</a></li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+
         {{ content }}
-        
+
+
+        <footer class="footer">
+            <div class="container">
+            <span class="text-muted">Elliot Alker &copy; 2017</span>
+            </div>
+        </footer>
+
+
+        <!-- Convention Scripts before the closing 'body' tag -->
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://web.archive.org/web/20180810090909js_/https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="" crossorigin="anonymous"></script>
+        <script src="https://web.archive.org/web/20180810090909js_/https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="" crossorigin="anonymous"></script>
+        <script src="https://web.archive.org/web/20180810090909js_/https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="" crossorigin="anonymous"></script>
+
+            
+        <script src="https://web.archive.org/web/20180810090909js_/https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+        <script type="text/javascript" src="/assets/js/main.js"></script>
+
     </body>
 </html>
