--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,11 +1,10 @@
+@import url('https://web.archive.org/web/20180901054854cs_/https://fonts.googleapis.com/css?family=Playfair+Display');
+@import url('https://web.archive.org/web/20180901054854cs_/https://fonts.googleapis.com/css?family=Arvo');
+@import url('https://web.archive.org/web/20180901054854cs_/https://fonts.googleapis.com/css?family=Raleway');
+
 body {
     background-color: white;
-    margin-top: 5%;
-    margin-right: 15%;
-    margin-bottom: 10%;
-    margin-left: 15%;
     line-height: 1.5;
-    padding: 4em 1em;
     font-family: "Lucida Grande", sans-serif;
 }
 
@@ -22,6 +21,7 @@ h2 {
 
 h3 {
     color: black;
+    margin-top: 1%;
 }
 
 ul, li {
@@ -66,3 +66,112 @@ code {
 pre {
   padding: 1em;
 }
+
+.navbar .navbar-brand{
+	font-family: 'Playfair Display';
+	font-style: italic;
+
+}
+.navbar .navbar-nav {
+	font-family: 'Playfair Display';
+	
+  }
+
+.welcome{
+	font-family:'Playfair Display';
+	
+}
+
+
+.navbar li > a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+.navbar li > a:hover {
+  color: #000;
+}
+
+.navbar li > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0089CC;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.navbar li > a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+
+.ml14 {
+	font-weight: 200;
+	font-family: 'Playfair Display';
+	font-size: 3.2em;
+  }
+  
+  .ml14 .text-wrapper {
+	position: relative;
+	display: inline-block;
+	padding-top: 0.1em;
+	padding-right: 0.05em;
+	padding-bottom: 0.15em;
+  }
+  
+  .ml14 .line {
+	opacity: 0;
+	position: absolute;
+	left: 0;
+	height: 2px;
+	width: 100%;
+	background-color: #fff;
+	transform-origin: 100% 100%;
+	bottom: 0;
+  }
+  
+  .ml14 .letter {
+	display: inline-block;
+	line-height: 1em;
+	}
+	
+	.mx-l{
+		margin-top: 3%;
+		
+	}
+
+	.row{
+		margin-top: 5%;
+	}
+
+	.intro{
+		margin-top: 5%;
+	}
+
+
+	html {
+		position: relative;
+		min-height: 100%;
+
+	}
+	body {
+		margin-bottom: 60px; /* Margin bottom by footer height */
+	}
+	.footer {
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		height: 60px; /* Set the fixed height of the footer here */
+		line-height: 60px; /* Vertically center the text there */
+		background-color: #60757F;
+	}
