Updated sections - ongoing design work merging two websites.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,19 +18,13 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container">
-                    <h1 class="navbar-brand mb-0">Elliot Alker</h1>
+                    <h1 class="navbar-brand mb-0"><a href="/index.html">Elliot Alker</a></h1>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li><a href="/blog.html">blog</a></li>
-                    <li><a href="https://github.com/elliotalker">code</a></li>
-                    <li><a href="https://www.alker.xyz">web projects</a></li>
-                    <li><a href="/software-engineering.html">software engineering</a></li>
-                    <li><a href="https://pinboard.in/u:elliot35">links</a></li>
-                    <li><a href="https://twitter.com/elliotdev_">twitter</a></li>
-                    <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a></li>
                     <li><a href="/about.html">about</a></li>
                 </ul>
             </div>
