Updated the layout. Working on ifinishing the migration of the old site to the new site.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,22 +24,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li><a href="/blog.html">blog</a></li>
-                    <li><a href="/about.html">about</a></li>
+                    <li class="nav-item px-3"><a href="/blog.html">Blog</a></li>
+                    <li class="nav-item px-3"><a href="/projects.html">Projects</a></li>
+                    <li class="nav-item px-3"><a href="/about.html">About</a></li>
                 </ul>
             </div>
             </div>
         </nav>
 
         {{ content }}
-
-
-        <footer class="footer">
-            <div class="container">
-            <span class="text-muted">Elliot Alker &copy; 2017</span>
-            </div>
-        </footer>
-
 
         <!-- Convention Scripts before the closing 'body' tag -->
         <!-- Optional JavaScript -->
