--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,17 +8,10 @@
     </head>
     
     <body>
-        
-        <h1>{{ page.title }}</h1>
-
-        <h3>{{ page.date | date: "%B %d, %Y" }}</h3>
-        
-        {{ content }}
-        
+        <div class="container">
+            <h1>{{ page.title }}</h1>
+            <h3>{{ page.date | date: "%B %d, %Y" }}</h3>
+            {{ content }}
+        </div>
     </body>
 </html>
-
-
-
-
-
