--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -76,16 +76,15 @@ pre {
 .navbar .navbar-brand{
 	font-family: 'Playfair Display';
 	font-style: italic;
-
 }
+
 .navbar .navbar-nav {
 	font-family: 'Playfair Display';
-	
-  }
+  justify-content: between;
+}
 
 .welcome{
 	font-family:'Playfair Display';
-	
 }
 
 .navbar li > a {
@@ -119,10 +118,15 @@ pre {
   transform: scaleX(1);
 }
 
+.ml-auto{
+  justify-content: space-between;
+}
+
 .ml14 {
 font-weight: 200;
 font-family: 'Playfair Display';
 font-size: 3.2em;
+text-decoration: none;
 }
 
 .ml14 .text-wrapper {
@@ -160,13 +164,4 @@ line-height: 1em;
 
 .intro{
   margin-top: 5%;
-}
-	
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #60757F;
 }
