Updates to the posts, structure and layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item px-3"><a href="/blog.html">Blog</a></li>
+                    <li class="nav-item px-3"><a href="/blog.html">Posts</a></li>
+                    <li class="nav-item px-3"><a href="/pages.html">Pages</a></li>
                     <li class="nav-item px-3"><a href="/projects.html">Projects</a></li>
                     <li class="nav-item px-3"><a href="/about.html">About</a></li>
                 </ul>
