--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +13,7 @@
     
     <body>
         <div class="container">
+            <button><a href="/blog.html">All Posts</a></button>
             <h1>{{ page.title }}</h1>
             <h3>{{ page.date | date: "%B %d, %Y" }}</h3>
             {{ content }}
