--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,6 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
-        <!-- Font from Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
         <title>{{ page.title }}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,37 +12,46 @@
     </head>
 
     <body>
-        
+        <div id="page-container">
+        <div id="content-wrap">
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container">
-                    <h1 class="navbar-brand mb-0"><a href="/index.html">Elliot Alker</a></h1>
+                    <h1 class="navbar-brand mb-0"><a class="navbar-brand" href="/index.html">Elliot Alker</a></h1>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item px-3"><a href="/blog.html">Posts</a></li>
-                    <li class="nav-item px-3"><a href="/pages.html">Pages</a></li>
+                    <li class="nav-item px-3"><a href="/about.html">About Me</a></li>
                     <li class="nav-item px-3"><a href="/projects.html">Projects</a></li>
-                    <li class="nav-item px-3"><a href="/about.html">About</a></li>
+                    <li class="nav-item px-3"><a href="/photos.html">Photos</a></li>
                 </ul>
             </div>
             </div>
         </nav>
 
         {{ content }}
+        
+        <!-- <script src="https://web.archive.org/web/20180810090909js_/https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="" crossorigin="anonymous"></script>
+        <script src="https://web.archive.org/web/20180810090909js_/https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="" crossorigin="anonymous"></script> -->
+        <!-- <script src="https://web.archive.org/web/20180810090909js_/https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="" crossorigin="anonymous"></script> -->
 
-        <!-- Convention Scripts before the closing 'body' tag -->
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://web.archive.org/web/20180810090909js_/https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="" crossorigin="anonymous"></script>
-        <script src="https://web.archive.org/web/20180810090909js_/https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="" crossorigin="anonymous"></script>
-        <script src="https://web.archive.org/web/20180810090909js_/https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="" crossorigin="anonymous"></script>
-
-            
+        <div class="container">
+            <footer>
+                <a href="https://twitter.com/elliotdev_">Twitter</a>
+                /
+                <a href="https://github.com/elliotalker">GitHub</a>
+                /
+                <a href="https://www.linkedin.com/in/elliot-alker">LinkedIn</a>
+                /
+                <a href="https://pinboard.in/elliot35">Pinboard</a>
+            </footer>
+        </div>
+        
         <script src="https://web.archive.org/web/20180810090909js_/https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         <script type="text/javascript" src="/assets/js/main.js"></script>
-
+        </div>
+        </div>
     </body>
 </html>
