--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,5 @@
+// TODO: Different fonts 
+
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 @import url('https://fonts.googleapis.com/css?family=Arvo');
 @import url('https://fonts.googleapis.com/css?family=Raleway');
@@ -19,7 +21,6 @@ body {
 
 h1 {
     color: black;
-    font-size: 5em;
 }
 
 h2 {
@@ -42,7 +43,8 @@ ul, li {
 }
 
 p {
-    color: black;
+    color: #555;
+    line-height: 2;
 }
 
 strong {
@@ -65,6 +67,7 @@ a:hover {
 code,
 pre {
   background: #eee;
+  border-bottom: 1px solid #d8dee9;
 }
 
 code {
@@ -74,20 +77,30 @@ code {
 
 pre {
   padding: 1em;
+  border-left: 2px solid #69c;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  height: 2.5rem;            /* Footer height */
+}
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
 }
 
 .navbar .navbar-brand{
-	font-family: 'Playfair Display';
-	font-style: italic;
+  text-decoration: none;
 }
 
 .navbar .navbar-nav {
-	font-family: 'Playfair Display';
   justify-content: between;
-}
-
-.welcome{
-	font-family:'Playfair Display';
 }
 
 .navbar li > a {
@@ -167,4 +180,92 @@ line-height: 1em;
 
 .intro{
   margin-top: 5%;
+}
+
+// New CSS code for project front
+
+.box-wrapper {
+  display: grid;
+  margin-top: 5%;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: minmax(200px, 1fr);
+  grid-column-gap: 2em;
+  grid-row-gap: 5em;
+}
+
+.box {
+  height: 250px;
+  object-fit: cover;
+  display: block; 
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  position: relative;
+  border-radius: 3px;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  text-align: center;
+  background-color: #ffffff;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.box::after {
+  content: "";
+  border-radius: 5px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.box:hover {
+  -webkit-transform: scale(1.10, 1.10);
+  transform: scale(1.10, 1.10);
+}
+
+.box:hover::after {
+    opacity: 1;
+}
+
+.project-generic {
+  background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+}
+
+.project-fractal {
+  background: linear-gradient(90deg, #FFFF00 0%, #00FF00 100%);
+}
+
+.project-space {
+  background-image: url("https://images.pexels.com/photos/110854/pexels-photo-110854.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+  background-position: center; 
+}
+
+.project-mp {
+  background: linear-gradient(90deg, #00FF80 0%, #0000FF 100%);
+}
+
+.project-gallery {
+  background-image: url("https://images.unsplash.com/photo-1518998053901-5348d3961a04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80");
+  background-position: center; 
+}
+
+.project-stars {
+  background-image: url("https://i.ytimg.com/vi/qWDmlFsIMHM/maxresdefault.jpg");
+  background-position: center;
+}
+
+.project-fractal {
+  background: linear-gradient(90deg, #FF0000 0%, #FF8000 100%);
+}
+
+.project-graphics {
+  background: linear-gradient(90deg, #FF8000 0%, #FFFF00 100%);
 }
