--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item px-3"><a href="/about.html">About Me</a></li>
+                    <li class="nav-item px-3"><a href="/blog.html">Blog</a></li>
                     <li class="nav-item px-3"><a href="/projects.html">Projects</a></li>
                     <li class="nav-item px-3"><a href="/photos.html">Photos</a></li>
                 </ul>
@@ -33,9 +34,9 @@
 
         {{ content }}
         
-        <!-- <script src="https://web.archive.org/web/20180810090909js_/https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="" crossorigin="anonymous"></script>
-        <script src="https://web.archive.org/web/20180810090909js_/https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="" crossorigin="anonymous"></script> -->
-        <!-- <script src="https://web.archive.org/web/20180810090909js_/https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="" crossorigin="anonymous"></script> -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="" crossorigin="anonymous"></script>
 
         <div class="container">
             <footer>
