Added RSS link to footer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,8 @@
                 <a href="https://www.linkedin.com/in/elliot-alker">LinkedIn</a>
                 /
                 <a href="https://pinboard.in/elliot35">Pinboard</a>
+                /
+                <a href="/feed.xml">RSS</a>
             </footer>
         </div>
         
