Removed code from web archive.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
             </footer>
         </div>
         
-        <script src="https://web.archive.org/web/20180810090909js_/https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         <script type="text/javascript" src="/assets/js/main.js"></script>
         </div>
         </div>
