--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item px-3"><a href="/about.html">About Me</a></li>
-                    <li class="nav-item px-3"><a href="/blog.html">Blog</a></li>
+                    <li class="nav-item px-3"><a href="/blog.html">Writing</a></li>
                     <li class="nav-item px-3"><a href="/projects.html">Projects</a></li>
                     <li class="nav-item px-3"><a href="/photos.html">Photos</a></li>
                 </ul>
