--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,14 +17,14 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container">
-                    <h1 class="navbar-brand mb-0"><a class="navbar-brand" href="/index.html">Elliot Alker</a></h1>
+                    <div class="navbar-brand mb-0"><a class="navbar-brand" href="/index.html">Elliot Alker</a></div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item px-3"><a href="/about.html">About Me</a></li>
-                    <li class="nav-item px-3"><a href="/blog.html">Writing</a></li>
+                    <li class="nav-item px-3"><a href="/blog.html">Posts</a></li>
                     <li class="nav-item px-3"><a href="/projects.html">Projects</a></li>
                     <li class="nav-item px-3"><a href="/photos.html">Photos</a></li>
                 </ul>
@@ -32,25 +32,28 @@
             </div>
         </nav>
 
+        <div class="container">
         {{ content }}
+        </div>
         
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="" crossorigin="anonymous"></script>
 
-        <div class="container">
-            <footer>
-                <a href="https://twitter.com/elliotdev_">Twitter</a>
-                /
-                <a href="https://github.com/elliotalker">GitHub</a>
-                /
-                <a href="https://www.linkedin.com/in/elliot-alker">LinkedIn</a>
-                /
-                <a href="https://pinboard.in/elliot35">Pinboard</a>
-                /
-                <a href="/feed.xml">RSS</a>
-            </footer>
-        </div>
+        
+        <footer id="footer">
+            <a href="https://twitter.com/elliotdev_">Twitter</a>
+            /
+            <a href="https://github.com/elliotalker">GitHub</a>
+            /
+            <a href="https://www.linkedin.com/in/elliot-alker">LinkedIn</a>
+            /
+            <a href="https://pinboard.in/elliot35">Pinboard</a>
+            /
+            <a href="./meta.html">Meta</a>
+            /
+            <a href="/feed.xml">RSS</a>
+        </footer>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         <script type="text/javascript" src="/assets/js/main.js"></script>
