--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,10 +12,8 @@ layout: default
     </head>
     
     <body>
-        <div class="container">
-            <h1>{{ page.title }}</h1>
-            <p>Posted: {{ page.date | date: "%B %d, %Y" }}</p>
-            {{ content }}
-        </div>
+        <h1>{{ page.title }}</h1>
+        <p>{{ page.date | date: "%B %d, %Y" }}</p>
+        {{ content }}
     </body>
 </html>
