--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,9 +4,9 @@
 @import url('https://fonts.googleapis.com/css?family=Arvo');
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-// * {
-//   border: 1px dotted black;
-// }
+//* {
+// border: 1px dotted black;
+//}
 
 html {
   position: relative;
@@ -14,24 +14,9 @@ html {
 }
 
 body {
-    background-color: white;
+    background-color: #F1F5F2;
     line-height: 1.5;
-    font-family: "Lucida Grande", sans-serif;
-}
-
-h1 {
-    color: black;
-}
-
-h2 {
-    color: black;
-    margin-top: 1em;
-    padding-top: 1em;
-}
-
-h3 {
-    color: black;
-    margin-top: 1%;
+    font-family: sans-serif;
 }
 
 ul, li {
@@ -43,7 +28,6 @@ ul, li {
 }
 
 p {
-    color: #555;
     line-height: 2;
 }
 
@@ -52,8 +36,7 @@ strong {
 }
 
 a {
-    text-decoration: none;
-    
+    text-decoration: none;   
 }
 
 a:hover {
@@ -80,10 +63,14 @@ pre {
   border-left: 2px solid #69c;
 }
 
+
 footer {
   position: absolute;
   bottom: 0;
+  width: 100%;
   height: 2.5rem;            /* Footer height */
+  margin: auto;
+  text-align:center;
 }
 
 #page-container {
@@ -96,6 +83,8 @@ footer {
 }
 
 .navbar .navbar-brand{
+  font-family: georgia;
+  font-size: 150%;
   text-decoration: none;
 }
 
@@ -132,6 +121,22 @@ footer {
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
+}
+
+
+
+table{
+    border-collapse: collapse;
+    border-spacing: 0;
+    border:2px solid #ff0000;
+}
+
+th{
+    border:2px solid #000000;
+}
+
+td{
+    border:1px solid #000000;
 }
 
 .ml-auto{
