--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,9 +1,3 @@
-// TODO: Different fonts 
-
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
-@import url('https://fonts.googleapis.com/css?family=Arvo');
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-
 //* {
 // border: 1px dotted black;
 //}
@@ -25,6 +19,10 @@ ul, li {
     text-align: left;
     margin-top: 10px;
     padding:0; 
+}
+
+h1, h2, h3, h4 {
+  margin-bottom: 1em;
 }
 
 p {
@@ -122,8 +120,6 @@ footer {
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
 }
-
-
 
 table{
     border-collapse: collapse;
