--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,57 +4,27 @@
         <title>{{ page.title }}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <!-- Custom CSS -->
+        <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
     </head>
 
     <body>
-        <div id="page-container">
-        <div id="content-wrap">
+        
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-            <div class="container">
-                    <div class="navbar-brand mb-0"><a class="navbar-brand" href="/index.html">Elliot Alker</a></div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item px-3"><a href="/about.html">About Me</a></li>
-                    <li class="nav-item px-3"><a href="/blog.html">Posts</a></li>
-                    <li class="nav-item px-3"><a href="/projects.html">Projects</a></li>
+        <header>
+        <h2>Elliot Alker</h2>
+        <nav>
+                <ul>
+                    <li><a href="/about">About Me</a></li>
+                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/projects">Projects</a></li>
                 </ul>
-            </div>
-            </div>
         </nav>
+        </header>
 
-        <div class="container">
+        <main>
         {{ content }}
-        </div>
-        
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="" crossorigin="anonymous"></script>
+        </main>
 
-        
-        <footer id="footer">
-            <a href="https://twitter.com/elliotdev_">Twitter</a>
-            /
-            <a href="https://github.com/elliotalker">GitHub</a>
-            /
-            <a href="https://www.linkedin.com/in/elliot-alker">LinkedIn</a>
-            /
-            <a href="https://pinboard.in/elliot35">Pinboard</a>
-            /
-            <a href="/feed.xml">RSS</a>
-        </footer>
-        
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-        <script type="text/javascript" src="/assets/js/main.js"></script>
-        </div>
-        </div>
     </body>
 </html>
