--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,27 +1,49 @@
-//* {
-// border: 1px dotted black;
-//}
-
 html {
   position: relative;
   min-height: 100%;
 }
 
 body {
-    background-color: #F1F5F2;
+    margin: 1em auto 2em auto;
+    max-width: 50em;
     line-height: 1.5;
     font-family: sans-serif;
+    padding: 0 1em;
 }
 
 ul, li {
     list-style-type: none;
     list-style-position:inside;
     text-align: left;
-    margin-top: 10px;
     padding:0; 
 }
 
+header {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  h2 {
+    color: green;
+    font-family: Garamond, serif;
+  }  
+
+  nav {
+    margin-left: auto;
+  }
+
+  ul {
+    list-style: none;
+  }
+
+  li {
+    display: inline-block;
+    padding: 0 10px;
+  }
+}
+
 h1, h2, h3, h4 {
+  margin-top: 1em;
   margin-bottom: 1em;
 }
 
@@ -35,10 +57,11 @@ strong {
 
 a {
     text-decoration: none;   
+    color: green;
 }
 
 a:hover {
-    color: blue;
+    color: darkgreen;
 }
 
 .head {
@@ -61,7 +84,6 @@ pre {
   border-left: 2px solid #69c;
 }
 
-
 footer {
   position: absolute;
   bottom: 0;
@@ -69,56 +91,6 @@ footer {
   height: 2.5rem;            /* Footer height */
   margin: auto;
   text-align:center;
-}
-
-#page-container {
-  position: relative;
-  min-height: 100vh;
-}
-
-#content-wrap {
-  padding-bottom: 2.5rem;    /* Footer height */
-}
-
-.navbar .navbar-brand{
-  font-family: georgia;
-  font-size: 150%;
-  text-decoration: none;
-}
-
-.navbar .navbar-nav {
-  justify-content: between;
-}
-
-.navbar li > a {
-  position: relative;
-  color: #000;
-  text-decoration: none;
-}
-
-.navbar li > a:hover {
-  color: #000;
-}
-
-.navbar li > a:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #0089CC;
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.navbar li > a:hover:before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
 }
 
 table{
@@ -133,46 +105,6 @@ th{
 
 td{
     border:1px solid #000000;
-}
-
-.ml-auto{
-  justify-content: space-between;
-}
-
-.ml14 {
-font-weight: 200;
-font-family: 'Playfair Display';
-font-size: 3.2em;
-text-decoration: none;
-}
-
-.ml14 .text-wrapper {
-position: relative;
-display: inline-block;
-padding-top: 0.1em;
-padding-right: 0.05em;
-padding-bottom: 0.15em;
-}
-
-.ml14 .line {
-opacity: 0;
-position: absolute;
-left: 0;
-height: 2px;
-width: 100%;
-background-color: #fff;
-transform-origin: 100% 100%;
-bottom: 0;
-}
-
-.ml14 .letter {
-display: inline-block;
-line-height: 1em;
-}
-
-.mx-l{
-  margin-top: 3%;
-  
 }
 
 .row{
