Added new title styling, added new project pages and cleaned index page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         
         <!-- Navigation -->
         <header>
-        <h2>Elliot Alker</h2>
+        <h2><a href="/">Elliot Alker</a></h2>
         <nav>
                 <ul>
                     <li><a href="/about">About Me</a></li>
