--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     
     <body>
         <h1>{{ page.title }}</h1>
-        <p>Posted: {{ page.date | date: "%d %B %Y" }}</p>
+        <p id="postdate">Posted: {{ page.date | date: "%d %B %Y" }}</p>
         {{ content }}
     </body>
 </html>
