Fixed typos and links.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -125,7 +125,16 @@ td{
   background-color: green;
 }
 
+#posttitle {
+ text-align: center; 
+}
+
 #postdate {
+  color: #D3D3D3;
+  text-align: center; 
+}
+
+#why {
   color: #D3D3D3;
 }
 
