--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
     </head>
     
     <body>
-        <h1>{{ page.title }}</h1>
+        <h1 id="posttitle">{{ page.title }}</h1>
         <p id="postdate">Posted: {{ page.date | date: "%d %B %Y" }}</p>
         {{ content }}
     </body>
