--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <h2><a href="/">Elliot Alker</a></h2>
         <nav>
                 <ul>
-                    <li><a href="/about">About Me</a></li>
+                    <li><a href="/about">About</a></li>
                     <li><a href="/blog">Blog</a></li>
                     <li><a href="/projects">Projects</a></li>
                 </ul>
