--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,7 @@
 html {
   position: relative;
   min-height: 100%;
+  overflow-y:scroll;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
     max-width: 50em;
     line-height: 1.5;
     font-family: sans-serif;
-    padding: 0 1em;
+    // padding: 0 1em;
     background-color: #FCF9F4;
 }
 
