--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    margin: 1em auto 2em auto;
+    margin: 1em 1em 2em 1em;
     max-width: 50em;
     line-height: 1.5;
     font-family: sans-serif;
