Updated main nav settings and added pages section to homepage.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         
         <!-- Navigation -->
         <header>
-        <h2><a href="/">Elliot Alker</a></h2>
+        <div class="topname"><h2><a href="/">Elliot Alker</a></h2></div>
         <nav>
                 <ul>
                     <li><a href="/about">About</a></li>
