--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -23,14 +23,17 @@ ul, li {
 header {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-
-  h2 {
-    color: green;
-  }  
+  flex-direction: row;
+  justify-content: space-between;
 
   nav {
-    margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .topname {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
   ul {
@@ -46,12 +49,14 @@ header {
 h1, h2, h3, h4 {
   margin-top: 1em;
   margin-bottom: 1em;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 p {
-    line-height: 2;
-    font-family: "Georgia";
-    color: #555
+
+  font-family: 'Georgia', 'Times New Roman', Times, serif;
+  line-height: 2;
+  color: #525050;
 }
 
 strong {
@@ -123,7 +128,7 @@ td{
 }
 
 #pagetitle {
-  font-size: 3em;
+  font-size: 2.5em;
 }
 
 #posttitle {
@@ -131,7 +136,7 @@ td{
 }
 
 #postdate {
-  color: #D3D3D3;
+  color: green;
   text-align: center; 
 }
 
