--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,8 +12,10 @@ layout: default
     </head>
     
     <body>
+        <div class="post-content">
         <h1 id="posttitle">{{ page.title }}</h1>
         <p id="postdate">Posted on {{ page.date | date: "%d %B %Y" }}</p>
         {{ content }}
+        </div>
     </body>
 </html>
