Added page view script.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+        <!-- Page Views -->
+        <script data-goatcounter="https://eja.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
     </head>
 
     <body>
@@ -23,9 +25,14 @@
         </nav>
         </header>
 
+        <hr />
+        
+
         <main>
         {{ content }}
         </main>
+
+        <hr />
 
     </body>
 </html>
