--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,9 +8,9 @@ html {
 
 body {
     line-height: 1.5;
-    font-family: sans-serif;
     padding: 0 1em;
     background-color: #FCF9F4;
+    font-family: sans-serif;
 }
 
 ul, li {
@@ -23,32 +23,97 @@ ul, li {
 header {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
+  align-items: center; 
+}
 
-  nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header h1 {
+    font-weight: normal;
+    // font-size: 2.8rem;
+    margin: 0;
+    padding: 0; 
   }
   
-  .topname {
-    font-family: sans-serif;
+  header nav {
+    margin-left: auto;
+    /* Move nav to the right */ 
   }
+  
+    header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0; }
+    header ul li {
+      display: inline-block;
+      // font-size: 1.8rem;
+      padding: 0 10px;
+      margin-right: 1em; }
+      header ul li:last-child {
+        margin-right: 0; }
+      header ul li a {
+        color: #222;
+        text-decoration: none; }
+  @media (max-width: 45rem) {
+    header nav {
+      width: 100%; }
+    header ul {
+      margin-top: 1rem; }
+      header ul li {
+        padding-left: 0;
+        margin-right: 0; }
+        header ul li a {
+          color: #0000FF;
+          text-decoration: underline; } }
+.headline {
+  text-align: center;
+  letter-spacing: 1px;
+  margin: 3rem 0; }
+  .headline .space {
+    display: none; }
 
-  ul {
-    list-style: none;
+@media (max-width: 70rem) {
+  .headline {
+    text-align: left; 
   }
-
-  li {
-    display: inline-block;
-    padding: 0 10px;
+  .headline br {
+    display: none; 
   }
+  .headline .space {
+    display: inline; 
+  } 
 }
+
+// header {
+//   display: flex;
+//   flex-wrap: wrap;
+//   justify-content: center;
+
+//   nav {
+//     display: flex;
+//     align-items: center;
+//     justify-content: flex-end;
+    
+//     ul {
+//       list-style: none;
+//       margin: 0;
+//       padding: 0;
+//       display: flex;
+//     }
+  
+//     li {
+//       display: inline-block;
+//       padding: 0 10px;
+//       margin-left: 20px;
+//     }
+//   }
+
+//   .topname {
+//     font-family: sans-serif;
+//   }
+// }
 
 .post-content { 
   p {
-    font-family: sans-serif;
+    font-family: 'Georgia', serif;
   }
   
   li {
