Changed title font.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         
         <!-- Navigation -->
         <header>
-        <div class="topname"><h2><a href="/">Elliot Alker</a></h2></div>
+        <h2><a href="/">Elliot Alker</a></h2>
         <nav>
                 <ul>
                     <li><a href="/about">About</a></li>
