--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -26,16 +26,20 @@ header {
 }
 
 header h1 {
-    font-weight: normal;
-    // font-size: 2.8rem;
-    margin: 0;
-    padding: 0; 
-  }
+  font-weight: normal;
+  // font-size: 2.8rem;
+  margin: 0;
+  padding: 0; 
+}
+
+header h2 {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
   
-  header nav {
-    margin-left: auto;
-    /* Move nav to the right */ 
-  }
+header nav {
+  margin-left: auto;
+  /* Move nav to the right */ 
+}
   
     header ul {
     list-style-type: none;
