--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,10 @@ layout: default
     
     <body>
         <div class="post-content">
-        <h1 id="posttitle">{{ page.title }}</h1>
-        <p id="postdate">{{ page.date | date: "%d %B %Y" }}</p>
+            <div class="post-title-section">
+                <h1 id="post-title">{{ page.title }}</h1>
+                <p id="post-date">{{ page.date | date: "%d %B %Y" }}</p>
+            </div>
         {{ content }}
         </div>
     </body>
