--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,8 +1,8 @@
 html {
   position: relative;
-  min-height: 100%;
+  min-height: 100vh;
   overflow-y: scroll;
-  max-width: 50em;
+  max-width: 45em;
   margin: 0 auto;
 }
 
@@ -12,8 +12,13 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
 }
 
+#bloglist{
+  ul {
+  list-style: none;
+  }
+}
+
 ul, li {
-    list-style-type: none;
     list-style-position: inside;
     text-align: left;
     padding: 0; 
@@ -24,17 +29,15 @@ header {
   display: flex;
   flex-wrap: wrap;
   align-items: center; 
+  padding-top: 1em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid black;
 }
 
 header h1 {
-  font-weight: normal;
-  // font-size: 2.8rem;
   margin: 0;
   padding: 0; 
-}
-
-header h2 {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
 }
   
 header nav {
@@ -83,6 +86,10 @@ header nav {
   } 
 }
 
+#homecontent {
+  text-align: justify;
+}
+
 .post-content { 
   p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
@@ -98,6 +105,7 @@ header nav {
 h1, h2, h3, h4 {
   margin-top: 1em;
   margin-bottom: 1em;
+  font-weight: normal;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
 }
 
@@ -144,48 +152,53 @@ pre {
   border-radius: 4px;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;            /* Footer height */
-  margin: auto;
-  text-align:center;
+main {
+  padding-top: 1.5em;
+  padding-bottom: 2em;
 }
 
-table{
+table {
     border-collapse: collapse;
     border-spacing: 0;
     border:2px solid #ff0000;
 }
 
-th{
+th {
     border:2px solid #000000;
 }
 
-td{
+td {
     border:1px solid #000000;
 }
 
-.row{
+.row {
   margin-top: 5%;
 }
 
-.intro{
+.intro {
   margin-top: 5%;
 }
 
 #pagetitle {
-  font-size: 2.5em;
+  font-size: 2em;
+  font-weight: normal;
 }
 
-#posttitle {
- text-align: center; 
+#post-title {
+  font-weight: normal;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
-#postdate {
-  color: green;
-  text-align: center; 
+#post-date {
+  margin-top: 0em;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 // Styling for Web Apps Page
@@ -259,8 +272,7 @@ td{
 }
 
 .project-gallery {
-  background-image: url("https://images.unsplash.com/photo-1518998053901-5348d3961a04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80");
-  background-position: center; 
+  background: linear-gradient(180deg, #FDEB71 0%, #E2B0FF 100%);
 }
 
 .project-stars {
