Changed line height and removed bottom margin from titles.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -104,14 +104,13 @@ header nav {
 
 h1, h2, h3, h4 {
   margin-top: 1em;
-  margin-bottom: 1em;
   font-weight: normal;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
+  font-family: 'Helvetica', sans-serif;
 }
 
 p {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
-  line-height: 2;
+  line-height: 1.8;
   color: #525050;
 }
 
