Added Notebook section to site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
                 <ul>
                     <li><a href="/about">ABOUT</a></li>
                     <li><a href="/blog">BLOG</a></li>
+                    <li><a href="/notebook">NOTES</a></li>
                     <li><a href="/projects">PROJECTS</a></li>
                 </ul>
         </nav>
