Updated notes and styling on blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,12 +15,12 @@
         
         <!-- Navigation -->
         <header>
-        <h1><a href="/">Elliot Alker</a></h1>
+        <h1 id="top-name"><a href="/">Elliot Alker</a></h1>
         <nav>
                 <ul>
                     <li><a href="/about">ABOUT</a></li>
                     <li><a href="/blog">BLOG</a></li>
-                    <li><a href="/notebook">NOTES</a></li>
+                    <li><a href="/notes">NOTES</a></li>
                     <li><a href="/projects">PROJECTS</a></li>
                 </ul>
         </nav>
