Styling on quotes

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -210,6 +210,11 @@ td {
     border:1px solid #000000;
 }
 
+blockquote {
+  border-left: 4px solid #dadada; 
+  padding-left: 0.5em;
+}
+
 .row {
   margin-top: 5%;
 }
