--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,23 +1,12 @@
 ---
 layout: default
 ---
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-        <title>{{ page.title }}</title>
-    </head>
-    
-    <body>
-        <div class="post-content">
-            <div class="post-title-section">
-                <h1 id="post-title">{{ page.title }}</h1>
-                <p id="post-date">{{ page.date | date: "%d %B %Y" }}</p>
-            </div>
-        {{ content }}
-        </div>
-    </body>
-</html>
+<div class="post-content">
+  <div class="post-title-section">
+    <h1 id="post-title">{{ page.title }}</h1>
+    <p id="post-date">{{ page.date | date: "%d %B %Y" }}</p>
+    {% include post-tags.html %}
+  </div>
+  <hr />
+  {{ content }}
+</div>
