Update styling and organize new code

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
 <footer>
   <div class="footer-content">
-    <p>&copy; {{ site.time | date: '%Y' }} Elliot Alker. All rights reserved.</p>
+    <p>
+      {{ site.time | date: '%Y' }} Elliot Alker. Created with Ruby and Jekyll. 
+	  <a href="{{ site.baseurl }}/sitemap/">Sitemap</a>.
+    </p>
   </div>
 </footer>
