--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,12 @@
       {{ content }}
     </main>
     
+	<div class="button-area">
+	<a href="#top" class="standard-button back-to-top-button" id="backToTop">Back to Top</a>
+	</div>
+	
+	
     {% include footer.html %}
+	<script src="{{ '/assets/js/back-to-top.js' | relative_url }}"></script>
   </body>
 </html>
