Vibe coded new tags, RSS and CSS features

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
   <div class="footer-content">
     <p>
-      {{ site.time | date: '%Y' }} Elliot Alker. Created with Ruby and Jekyll. 
-	  <a href="{{ site.baseurl }}/sitemap/">Sitemap</a>.
+      {{ site.time | date: '%Y' }} Elliot Alker. Created with Ruby and Jekyll.
+	  <a href="{{ site.baseurl }}/sitemap/">Sitemap</a> · <a href="{{ site.baseurl }}/tags/">Tags</a> · <a href="{{ site.baseurl }}/feed.xml">RSS</a>
     </p>
   </div>
 </footer>
