--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -102,7 +102,7 @@ a {
 ul, ol {
   margin-left: $no-spacing;
   margin-bottom: $base-spacing;
-  padding-left: $no-spacing;
+  padding-left: $base-spacing;
 }
 
 li {
