--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -3,8 +3,8 @@ $background-color: #FFFEF2;
 $text-color: #525050;
 $text-dark: #333;
 $text-light: #767676;
-$link-color: #2e7d32;  // More refined green
-$link-hover-color: #1b5e20;  // Darker green for hover
+$link-color: #1b5e20;  // Darker green for better contrast
+$link-hover-color: #0d3c13;  // Even darker green for hover
 $border-color: #000000;
 $light-gray: #f0f0f0;
 $medium-gray: #e0e0e0;
