--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,7 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
-<title>{{ page.title }}</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>{{ page.title }}</title>
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+<link rel="stylesheet" type="text/css" href="{{ '/assets/css/styles.css' | relative_url }}">
 <!-- Page Views -->
 <script data-goatcounter="https://eja.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
