Updated tag generation, clean website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="theme-color" content="#FFFEF2">
 <title>{{ page.title }}</title>
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="{{ '/assets/css/styles.css' | relative_url }}">
