--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html style="background: #FFFEF2;">
   <head>
     {% include header.html %}
   </head>
-  <body>
+  <body style="background: #FFFEF2;">
     {% include navigation.html %}
     
     <main>
