--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -9,11 +9,12 @@ html {
   scroll-behavior: smooth;
 }
 
-body {    
+body {
   padding: 0 $base-spacing;
   font-family: $primary-font;
   line-height: $line-height-relaxed;
   color: $text-color;
+  background: $background-color;
 }
 
 // Typography
